--- a/empresa/empresa.css
+++ b/empresa/empresa.css
@@ -1,6 +1,6 @@
 body {
     /*background-color: #131f1f !important;*/
-    background-color: white !important;
+    background-color: rgb(237, 237, 237) !important;
     overflow: hidden; 
   }
    
