--- a/empresa/empresa.css
+++ b/empresa/empresa.css
@@ -73,10 +73,7 @@ body {
     font-size: 18px;
 }
 
-#l12{
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
+
+.ldz{
+    box-shadow: 0px 0px 1px black;
 }
-
-
