--- a/empresa/empresa.css
+++ b/empresa/empresa.css
@@ -1,7 +1,7 @@
 body {
     /*background-color: #131f1f !important;*/
     background-color: rgb(237, 237, 237) !important;
-    overflow: hidden; 
+    /*overflow: hidden; */
   }
    
   /* ini: Preloader */
