--- a/empresa/assets/css/index.css
+++ b/empresa/assets/css/index.css
@@ -50,3 +50,18 @@ footer {
     margin: auto;
     padding: 0.1rem;
 }
+
+.redeSocial ul li{
+    font-family: Lato,sans-serif;
+    font-size: 1.6em;
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: grand;
+    src: url(../fonts/grand.otf);
+}
+
+.textoPrato{
+    font-family: grand;
+}
