--- a/tempodeaprender/conteudo/style/introducao.css
+++ b/tempodeaprender/conteudo/style/introducao.css
@@ -1,5 +1,5 @@
 body{
-	/*padding-left: 20px;*/
+	font-family: 'Lobster', cursive;
 }
 
 .conteudo{
@@ -36,3 +36,69 @@ h1{
 	box-shadow: 0px 0px 10px #69a6b5;
 	padding: 15px;
 }
+
+body {
+    /*background-color: #131f1f !important;*/
+    background-color: rgb(237, 237, 237) !important;
+  }
+
+#preloader {
+	position:fixed;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	background-color:#131f1f; /*  cor do background que vai ocupar o body  */
+	z-index:999; /* z-index para jogar para frente e sobrepor tudo  */
+}
+#preloader .inner {
+	position: absolute;
+	top: 50%; /* centralizar a parte interna do preload (onde fica a animação) */
+	left: 50%;
+	transform: translate(-50%, -50%);  
+}
+.bolas > div {
+  display: inline-block;
+  background-color: #f98b5f;
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  margin: 3px;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  animation-name: animarBola;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+   
+}
+.bolas > div:nth-child(1) {
+	animation-duration:0.99s ;
+	animation-delay: 0.2;
+}
+.bolas > div:nth-child(2) {
+	animation-duration: 0.99s ;
+	animation-delay: 0.5s;
+}
+.bolas > div:nth-child(3) {
+	animation-duration: 0.99s  ;
+	animation-delay: 0.7s;
+}
+ 
+@keyframes animarBola {
+  0% {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	opacity: 1;
+  }
+  16% {
+	-webkit-transform: scale(0.1);
+	transform: scale(0.1);
+	opacity: 0.7;
+  }
+  33% {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	opacity: 1; 
+  } 
+}
+
